Simplify the schedule.Config struct
Replace LastRunFile and LastSuccessFile fields by a single
StatefileKey and 2 type functions:

* schedule.Entry.LastRunFile()
* schedule.Entry.LastSuccessFile()

Use pointer receivers for all schedule.Entry functions.

Add omitempty to the Require field.
