# daemon/api/api.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 
 info:
   title: opensvc agent api
-  version: 4.1.3
+  version: 4.1.4
 
 paths:
   /api/array:
@@ -7438,8 +7438,7 @@ components:
         - key
         - max_parallel
         - last_run_at
-        - last_run_file
-        - last_success_file
+        - statefile_key
         - next_run_at
         - require
         - require_collector
@@ -7454,9 +7453,7 @@ components:
         last_run_at:
           type: string
           format: date-time
-        last_run_file:
-          type: string
-        last_success_file:
+        statefile_key:
           type: string
         max_parallel:
           type: integer
@@ -7476,8 +7473,7 @@ components:
         - action
         - schedule
         - key
-        - last_run_file
-        - last_success_file
+        - statefile_key
         - max_parallel
         - require
         - require_collector
@@ -7489,9 +7485,7 @@ components:
           type: string
         key:
           type: string
-        last_run_file:
-          type: string
-        last_success_file:
+        statefile_key:
           type: string
         max_parallel:
           type: integer
